--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "jquery": "^3.5.0",
     "querystring": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-discord-message": "^4.0.0",
+    "vue-multiselect": "^2.1.6",
+    "vue-parallax-js": "^0.2.3",
     "vue-router": "^3.1.6",
     "vuex": "^3.2.0"
   },
