--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "querystring": "^0.2.0",
     "vue": "^2.6.11",
     "vue-discord-message": "^4.0.0",
+    "vue-meta": "^2.3.3",
     "vue-multiselect": "^2.1.6",
     "vue-parallax-js": "^0.2.3",
     "vue-router": "^3.1.6",
