--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "jquery": "^3.5.0",
+    "moment": "^2.25.3",
+    "moment-duration-format": "^2.3.2",
     "querystring": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0",
     "vue-discord-message": "^4.0.0",
     "vue-meta": "^2.3.3",
     "vue-multiselect": "^2.1.6",
