--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "jquery": "^3.5.0",
+    "marked": "^1.0.0",
     "moment": "^2.25.3",
     "moment-duration-format": "^2.3.2",
     "querystring": "^0.2.0",
