--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
+    "deep-diff": "^1.0.2",
     "jquery": "^3.5.0",
     "marked": "^1.0.0",
     "moment": "^2.25.3",
